# bazel_go_windows

./: BUILD.bazel  WORKSPACE
foo/: BUILD.bazel
