load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bar.go"],
    importpath = "github.com/filipesilva/bazel_go_windows/bar",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["bar_test.go"],
    embed = [":go_default_library"],
)
